hphp/hack/test/typecheck/lambda/lambda_arithmetic_good.php.like_types.exp
File "lambda_arithmetic_good.php", line 16, characters 21-24:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 4, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 4, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 16, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 4, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 18, characters 21-24:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 4, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 4, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 18, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 4, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 20, characters 21-24:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 4, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 4, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 20, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 4, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 22, characters 21-26:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 4, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 4, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 22, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 4, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 24, characters 21-25:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 4, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 4, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 24, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 4, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 27, characters 21-24:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 7, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 7, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 27, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 7, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 28, characters 31-32:
Invalid argument (Typing[4110])
File "lambda_arithmetic_good.php", line 28, characters 10-28:
Expected ~(function(int): int) because it is an unenforceable type
File "lambda_arithmetic_good.php", line 14, characters 20-20:
  via this generic T
File "lambda_arithmetic_good.php", line 7, characters 45-61:
But got (function(mixed): ~int)
File "lambda_arithmetic_good.php", line 29, characters 21-25:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 7, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 7, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 29, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 7, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 29, characters 21-25:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 7, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 7, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 29, characters 24-25:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 7, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 30, characters 31-32:
Invalid argument (Typing[4110])
File "lambda_arithmetic_good.php", line 30, characters 10-28:
Expected ~(function(int): int) because it is an unenforceable type
File "lambda_arithmetic_good.php", line 14, characters 20-20:
  via this generic T
File "lambda_arithmetic_good.php", line 7, characters 45-61:
But got (function(mixed): ~int)
File "lambda_arithmetic_good.php", line 31, characters 21-26:
Typing error (Typing[4110])
File "lambda_arithmetic_good.php", line 7, characters 16-17:
Some type constraint(s) are violated here
File "lambda_arithmetic_good.php", line 7, characters 16-17:
T1 is a constrained type parameter
File "lambda_arithmetic_good.php", line 31, characters 21-22:
Expected num because this is used in an arithmetic operation
File "lambda_arithmetic_good.php", line 7, characters 16-17:
But got dynamic
File "lambda_arithmetic_good.php", line 32, characters 31-32:
Invalid argument (Typing[4110])
File "lambda_arithmetic_good.php", line 32, characters 10-28:
Expected ~(function(num): num) because it is an unenforceable type
File "lambda_arithmetic_good.php", line 14, characters 20-20:
  via this generic T
File "lambda_arithmetic_good.php", line 7, characters 45-61:
But got (function(mixed): ~float)
